--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -9,9 +9,13 @@
     "axios": "^1.5.1",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
+    "react-popper": "^2.3.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "^5.0.1",
+    "react-time-picker": "^6.5.2",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
